Back-end/src/main/java/com/example/error/UserIsNotCreatorException.java
package com.example.error;

public class UserIsNotCreatorException extends RuntimeException {

    public UserIsNotCreatorException(String message) {
        super(message);
    }

}